--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+* {
+    margin: 0;
+}
 .heading {
     background-color: #cccccc;
     text-align: center;
     font-size: 30px;
 }
-.paragraph {
-    background-color: #fcfcfc;
+p, .paragraph {
+    background-color: #dddddd;
     text-align: center;
     font-size: 12px;
+}
+table {
+    border: 1px solid #999999;
+}
+td {
+    border: 1px solid #999999;
 }
